一些奇怪的修改。总之准备开放了。